[metadata]
name = ffmpegio-plugin-static-ffmpeg
version = attr: ffmpegio_plugin_static_ffmpeg.__version__
description = ffmpegio finder plugin to use static-ffmpeg executable from static-ffmpeg package
long_description_content_type = text/x-rst
long_description = file: README.rst
keywords = multimedia, ffmpeg
license = GPL-2.0 License
url=https://python-ffmpegio.github.io/python-ffmpegio-plugin-static-ffmpeg
project_urls=
    Repository=https://github.com/python-ffmpegio/python-ffmpegio-plugin-static-ffmpeg
    Issues=https://github.com/python-ffmpegio/python-ffmpegio-plugin-static-ffmpeg/issues
    Pull Requests=https://github.com/python-ffmpegio/python-ffmpegio-plugin-static-ffmpeg/pulls
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Capture
    Topic :: Multimedia :: Video :: Conversion
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
install_requires =
    static-ffmpeg
    pluggy
python_requires = >=3.7,
packages=ffmpegio_plugin_static_ffmpeg

[options.entry_points]
ffmpegio =
    finder_static = ffmpegio_plugin_static_ffmpeg
